<resources>
    <string name="yl_common_company_information">Shanghai Yongli Information Technology Co., Ltd</string>
    <string name="yl_common_log_flag">log flag</string>
    <string name="yl_common_log_info">input info</string>
    <string name="yl_common_on">on</string>
    <string name="yl_common_off">off</string>
    <string name="yl_common_log_debug">input debug</string>
    <string name="yl_common_log_error">input error</string>
    <string name="yl_common_module_name">common module</string>
    <string name="yl_common_devices">devices</string>
    <string name="yl_common_loading_devices">loading devices</string>
    <string name="yl_common_not_found_device">not found device</string>
    <string name="yl_common_device_has_been_registered">device has been registered</string>
    <string name="yl_common_register_device_fail">register device fail</string>
    <string name="yl_common_success">success</string>
    <string name="yl_common_submit">submit</string>
    <string name="yl_common_saving">saving...</string>
    <string name="yl_common_deleting">deleting...</string>
    <string name="yl_common_save_map">save map</string>
    <string name="yl_common_reload_location">relocation</string>
    <string name="yl_common_trace_path">trace path</string>
    <string name="yl_common_spot">spot</string>
    <string name="yl_common_action">action</string>
    <string name="yl_common_edit">edit</string>
    <string name="yl_common_set_empty_trash_spot">set empty trash spot</string>
    <string name="yl_common_set_garage_spot">set garage spot</string>
    <string name="yl_common_set_add_water_spot">set add water spot</string>
    <string name="yl_common_set_recharge_spot">set recharge spot</string>
    <string name="yl_common_set_trace_spot">set trace spot</string>
    <string name="yl_common_auto_record_trace_spot">auto record clean path spot</string>
    <string name="yl_common_virtual_walls">virtual wall</string>
    <string name="yl_common_virtual_tracks">virtual tracks</string>
    <string name="yl_common_back">back</string>
    <string name="yl_common_maximum_speed">maximum speed</string>
    <string name="yl_common_navigation_mode">navigation mode</string>
    <string name="yl_common_free_navigation">free navigation</string>
    <string name="yl_common_track_navigation">track navigation</string>
    <string name="yl_common_track_first">track first</string>
    <string name="yl_common_rollback_trace_spot_num">rollback trace spot number</string>
    <string name="yl_common_connecting">connecting...</string>
    <string name="yl_common_name">name</string>
    <string name="yl_common_description">description</string>
    <string name="yl_common_input_empty">input is empty</string>
    <string name="yl_common_delete_confirm">are you sure delete?</string>
    <string name="yl_common_choice_virtual_track_group">virtual track group choice</string>
    <string name="yl_common_reloading">reloading...</string>
    <string name="yl_common_create_new">new</string>
    <string name="yl_common_standby">standby</string>
    <string name="yl_common_execute">execute task</string>
    <string name="yl_common_mappage_name">map name</string>
    <string name="yl_common_mappage_desc">map description</string>
    <string name="yl_common_map">map</string>
    <string name="yl_common_delete">delete</string>
    <string name="yl_common_update">update</string>
    <string name="yl_common_delete_trace_path_confirm">Are you sure you want to delete the trace path(%1$s)?</string>
    <string name="yl_common_delete_virtual_track_group_confirm">Are you sure you want to delete the virtual track group(%1$s)?</string>
    <string name="yl_common_testing">Testing......</string>
    <string name="yl_common_set_common_spot">set common spot</string>
    <string name="yl_common_gps_fence">gps fence</string>
    <string name="yl_common_delete_mappage">delete map</string>
    <string name="yl_common_edit_mappage">edit map</string>
    <string name="yl_common_virtual_tracks_group">virtual track group</string>
    <string name="yl_common_current_map">Current Map: %1$s</string>
    <string name="yl_common_getting">getting......</string>
    <string name="yl_common_run_log_level_debug">debug</string>
    <string name="yl_common_run_log_level_info">info</string>
    <string name="yl_common_run_log_level_warning">warning</string>
    <string name="yl_common_run_log_level_error">error</string>
    <string name="yl_common_run_log_level_critical">critical</string>
    <string name="yl_common_clear_map">clear map</string>
    <string name="yl_common_question">Fault: %1s$</string>
    <string name="yl_common_answer">Fault description or solution: %1$s</string>
    <string name="yl_common_connection_lost">Connection failed. Please check whether the network connection is normal and whether the device is powered on</string>
    <string name="yl_common_create_map">create map</string>
    <string name="yl_common_authorized_items">Authorized items</string>
    <string name="yl_common_edit_path">edit path</string>
    <string name="yl_common_authorized_user">Authorized user</string>
    <string name="yl_common_delete_grant_confirm">Are you sure you want to delete the authorization for %1$s?</string>
    <string name="yl_common_granted_user_non_existent">granted user non existent</string>
    <string name="yl_common_duplicate_authorization">duplicate authorization</string>
    <string name="yl_common_cannot_authorize_to_yourself">cannot authorize to yourself</string>
    <string name="yl_common_authorization_fail">authorization fail</string>
    <string name="yl_common_no_authorization_items">No authorization items</string>
    <string name="yl_common_distanceAndTime">point num: %1$d，distance(m): %2$.3f，time:%3$d</string>
    <string name="yl_common_enable_gps_fence">enable gps fence</string>
    <string name="yl_common_log_gps_map_slam">Record relationship between GPS and slam</string>
    <string name="yl_common_delete_gps_map_slam">Delete relationship between GPS and slam</string>
    <string name="yl_common_set_pose">set pose</string>
    <string name="yl_common_set_start_spot">set start spot</string>
    <string name="yl_common_reset_start_spot">reset start spot</string>
    <string name="yl_common_load_map">load map</string>
    <string name="yl_common_set_fence_spot">set fence spot</string>
    <string name="yl_common_clear_all">clear all</string>
    <string name="yl_common_area_clear">area clear</string>
    <string name="yl_common_add_wall">add wall</string>
    <string name="yl_common_save">save</string>
    <string name="yl_common_add_track">add track</string>
    <string name="yl_common_map_touch_mode">One finger touch:</string>
    <string name="yl_common_move_map">Move map</string>
    <string name="yl_common_rotate_pose_angle">Set pose angle</string>
    <string name="yl_common_run_mode">run mode</string>
    <string name="yl_common_create_map_mode">create map mode:</string>
</resources>
