<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/yl_common_LineLayoutControlStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#33000000">

        <Button
            android:id="@+id/btn_virtual_walls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/yl_common_ButtonStyle"
            android:text="@string/yl_common_virtual_walls" />

        <Button
            android:id="@+id/btn_virtual_tracks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/yl_common_ButtonStyle"
            android:text="@string/yl_common_virtual_tracks" />

        <Button
            android:id="@+id/btn_clear_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/yl_common_ButtonStyle"
            android:text="@string/yl_common_clear_map" />
    </LinearLayout>

</LinearLayout>