<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:dividerHorizontal"
        android:background="@drawable/yl_common_bottom_dialog_backgroud"
        android:orientation="vertical"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yl_common_authorized_items"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"/>

            <CheckBox
                android:id="@+id/cb_create_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yl_common_create_map"/>

            <CheckBox
                android:id="@+id/cb_edit_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yl_common_edit_path"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yl_common_authorized_user"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"/>

            <EditText
                android:id="@+id/et_authorized_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="mobile or email"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/yl_common_btn_bg_round_click"
            android:textColor="@drawable/yl_common_btn_click_text_color"
            android:text="@string/yl_common_submit" />

    </LinearLayout>
</LinearLayout>