<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/yl_common_padding_10"
    android:background="@drawable/yl_common_bottom_dialog_backgroud"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/et_map_page_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/yl_common_mappage_name"/>

    <EditText
        android:id="@+id/et_map_page_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_map_page_name"
        android:hint="@string/yl_common_mappage_desc"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_map_page_desc"
        android:layout_marginTop="10dp"
        android:background="@drawable/yl_common_btn_bg_round_click"
        android:textColor="@drawable/yl_common_btn_click_text_color"
        android:text="@string/yl_common_submit"/>

</androidx.constraintlayout.widget.ConstraintLayout>